codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_plan_mode_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ › Ask Codex to do anything                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  gpt-5.2 medium                                Plan mode (shift+tab to cycle)  "
