codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__transparent_slash_command_is_disabled_while_task_running.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ '/transparent' is disabled while a task is in progress.

■ '/transparent' is disabled while a task is in progress.
