codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__transparent_slash_command_reports_usage_for_invalid_arg.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ Usage: /transparent [on|off]
