codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(rendered)
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p codex-core -- --exact…

╭──────────────────────────────────────────────╮
│ › Ask Codex to do anything                   │
╰──────────────────────────────────────────────╯
  gpt-5.6-sol default · /tmp/project
